# bot4

./: .env  .env.example  README.md  bot.py  config.py  dashboard.py  loguru.py  main.py  pandas.py  pyproject.toml  requests.py  requirements.txt  scheduler.py  sp100.csv  tenacity.py  universe.py
alerts/: __init__.py  pushover.py
backtest/: __init__.py  engine.py
data/: __init__.py  indicators.py  market_data.py
exec/: __init__.py  broker.py  orders.py
risk/: __init__.py  sizing.py  stops.py  trails.py
scoring/: __init__.py  entry_scoring.py  exit_scoring.py  regime.py  sentiment.py
src/: config.py  main.py  scheduler.py  universe.py
src/backtest/: fixtures.py  metrics.py
src/data/: indicators.py  market_data.py  rollups.py
src/exec/: orders.py  state.py
src/risk/: sizing.py
src/scoring/: earnings.py  entry_scoring.py  regime.py
src/storage/: db.py  models.py
storage/: __init__.py  db.py  migrations.sql
tests/: conftest.py  test_bot.py  test_entry.py  test_exit.py  test_market_data_vix.py  test_pandas_stub.py  test_regime.py  test_scheduler.py  test_support_rule.py
