[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-sp100-scoring-hold-bot"
version = "0.1.0"
description = "Adaptive scoring & hold bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
