[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-sp100-scoring-hold-bot"
version = "0.1.0"
description = "Adaptive scoring & hold bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ib_insync==0.9.86",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "ta==0.11.0",
    "pydantic==2.8.2",
    "python-dotenv==1.0.1",
    "SQLAlchemy==2.0.32",
    "alembic==1.13.2",
    "requests==2.32.3",
    "tenacity==8.4.2",
    "loguru==0.7.2",
    "tzdata",
    "yfinance==0.2.40",
    "streamlit==1.39.0",
]

[tool.setuptools]
packages = [
    "alerts",
    "backtest",
    "data",
    "exec",
    "risk",
    "scoring",
    "storage",
]

[tool.pytest.ini_options]
addopts = "-q"
